[new feature]会员管理

--- a/temp.html
+++ b/temp.html
@@ -1,4 +1,6 @@
 
 
+================= version1.0.2[new feature - 会员系统]
+
 ================= version1.0.1[developing]
 ================= version1.0.0
